--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,29 @@
           <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
         </ul>
         {% endif %}
+        <div class="sidebar">
+
+            <h1>RENDER FOR ME !!!!!!! </h1>
+            
+            <table>
+                <thead>
+                    <tr>
+                        <th> TITLE </th>
+                        <th> DATE </th>
+                        <th> CATEGORY </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for post in site.posts %}
+                    </tr>
+                    <td class="td_title"><a href="{{site.url}}{{site.baseurl}}{{post.url}}">{{post.title}}</a></td>
+                    <td class="td_date">{{post.date | date: "%b %d, %y"}}</td>
+                    <td class="td_category">{{post.category}}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
       </header>
       <section>
 
