--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,16 @@
 body {
     background-color: #292929;
+
+}
+
+a {
+    color: #00abab
+    
+}
+a:hover {
+    color: #006868
+}
+
+h1 {
+    font-size: 4rem;
 }
