--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,16 +1,21 @@
 body {
-    background-color: #292929;
+    background-color: #292929 !important;
 
-}
 
-a {
-    color: #00abab
+    a {
+        color: #00abab
+
+    }
+    a:hover {
+        color: #006868
+    }
+
+    h1 {
+        font-size: 4rem;
+    }
+
+    code, pre {
+        overflow-x: visible;
+    }
     
-}
-a:hover {
-    color: #006868
-}
-
-h1 {
-    font-size: 4rem;
 }
