this will work i swear

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,26 +21,8 @@
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
-
-        {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
-        {% endif %}
-
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
         <div class="sidebar">
-
-            <h1>RENDER FOR ME !!!!!!! </h1>
-            
+            <h3>RENDER FOR ME !!!!!!! </h3>
             <table>
                 <thead>
                     <tr>
@@ -60,6 +42,11 @@
                 </tbody>
             </table>
         </div>
+        <h2 id="-blog-posts-blog-"><a href="/posts/" title="blog">blog</a></h2>
+        <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
+        <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
+        <p><a href="/bezos" title="jeff">jeff altar</a></p>
+
       </header>
       <section>
 
