--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <div class="sidebar">
-            <h3>RENDER FOR ME !!!!!!! </h3>
+            <h3>destory humams</h3>
             <table>
                 <thead>
                     <tr>
@@ -42,6 +42,7 @@
                 </tbody>
             </table>
         </div>
+        <div></div>
         <h2 id="-blog-posts-blog-"><a href="/posts/" title="blog">blog</a></h2>
         <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
         <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
