--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,31 +1,4 @@
 ---
 ---
 
-@import "";
-body .wrapper {
-    header {
-        h1 {
-            color: #7a2323;
-        }
-    }
-    background-color: #292929 !important;
-
-
-    a {
-        color: #00abab;
-
-    }
-    a:hover {
-        color: #006868;
-    }
-
-    h1 {
-        font-size: 4rem;
-    }
-
-    code, pre {
-        overflow-x: visible;
-    }
-
-    footer {display:none;}
-}
+@import "./build.scss";
