--- a/assets/css/build.scss
+++ b/assets/css/build.scss
@@ -1,7 +1,7 @@
 body .wrapper {
     header {
         h1 {
-            color: #7a2323;
+            color: hsla(35, 91%, 91%, 0.94);
         }
     }
     background-color: #292929 !important;
