--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -48,7 +48,7 @@ body {
 }
 
 @function set-text-color($color) {
-    if(lightness( $color ) > 50) {
+    @if(lightness( $color ) > 50) {
         @return $black;
     } else {
         @return $white;
