I am very bad at using css function syntax correctly

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -50,7 +50,8 @@ body {
 @function set-text-color($color) {
     @if(lightness( $color ) > 50) {
         @return $black;
-    } else {
+    }
+    @else {
         @return $white;
     }
 }
