changes to layouts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,16 +24,19 @@
         <div class="sidebar">
         </div>
         <div></div>
-        <h2 id="-blog-posts-blog-"><a href="/posts/" title="blog">blog</a></h2>
+        <h2 id="-blog-posts-blog-"><a href="/archive" title="blog">blog</a></h2>
         <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
         <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
-        <h4><a href="/bezos" title="jeff">jeff altar</a></h4>
-
+        <h4><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h4>
+        <button id="toggleUI" onclick="function() {
+                              
+                              document.querySelector('body').style.backgroundColor = '#fafafa';
+                              
+                              }"> i </button>
       </header>
       <section>
 
       {{ content }}
-
 
       </section>
       <footer>
