--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -28,16 +28,10 @@
         <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
         <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
         <h4><a href="/bezos" title="jeff">jeff altar</a></h4>
-
+        <!-- update from current default idiot!!! -->
       </header>
  
       <section>
-          <pre> 
-
-            wait this is gonna look like garbage!
-
-
-          </pre>
 
       {{ content }}
 
