fix syntax error around {{content}}

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,15 +31,14 @@
         <button id="toggleUI" onclick="function flipSwitch() {
                               
                               console.log('button triggered')
-                              if(document.querySelector('body').style.backgroundColor = '#fafafa';) {document.querySelector('body').style.backgroundColor = '#232323';} else { document.querySelector('body').style.backgroundColor = '#fafafa';}
+                              if (document.querySelector('body').style.backgroundColor = '#fafafa';)
+                              {document.querySelector('body').style.backgroundColor = '#232323';}
+                              else { document.querySelector('body').style.backgroundColor = '#fafafa';}
                               
                               }"> i </button>
       </header>
       <section>
-
       {{ content }}
-
-
       </section>
       <footer>
         {% if site.github.is_project_page %}
