--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,7 @@
         <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
         <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
         <h4><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h4>
-        <button id="toggleUI" onclick="function flipSwitch() {
-                              
-                              console.log('button triggered')
-                              if (document.querySelector('body').style.backgroundColor = '#fafafa';)
-                              {document.querySelector('body').style.backgroundColor = '#232323';}
-                              else { document.querySelector('body').style.backgroundColor = '#fafafa';}
-                              
-                              }"> i </button>
+        <button id="toggleUI" onclick="flipSwitch()"> i </button>
       </header>
       <section>
       {{ content }}
@@ -48,6 +41,19 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
+    <script> 
+    
+    function flipSwitch() {
+
+                               console.log('button triggered')
+                               if (document.querySelector('body'). style.backgroundColor = '#fafafa';)
+                               {document.querySelector('body').    style.backgroundColor = '#232323';}
+                               else { document.                    querySelector('body').style.backgroundColor = '#fafafa';}
+
+                               }
+
+    </script>
+
     {% if site.google_analytics %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
