update layouts, change styling

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -4,7 +4,7 @@ layout: default
 
 
 <div>
-    <h1>lol!</h1>
+    <h1>Post Archive</h1>
                 <table>
                  <thead>
                      <tr>
