--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script> function flipSwitch(){console.log("WOOOO")} </script>
+    <script>
+
+         function flipSwitch() {
+
+                                console.log('button triggered')
+                                if (document.                      querySelector('body'). style.backgroundColor = '#fafafa';)
+                                {document.                         querySelector('body').    style.backgroundColor = '#232323';}
+                                else {                             document.                    querySelector('body').style.         backgroundColor
+
+    </script>
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
@@ -41,17 +50,8 @@
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    <script> 
-    
-    function flipSwitch() {
-
-                               console.log('button triggered')
-                               if (document.querySelector('body'). style.backgroundColor = '#fafafa';)
-                               {document.querySelector('body').    style.backgroundColor = '#232323';}
-                               else { document.                    querySelector('body').style.backgroundColor = '#fafafa';}
-
-                               }
-
+    <script>
+        console.log("whoaaaaaaa");
     </script>
 
     {% if site.google_analytics %}
