--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,6 +6,10 @@ $dark : #29292f;
 $light : #fafafa;
 $default-background : #232323;
 body {
+    
+     background-color: $default-background!important;
+     color: set-text-color($default-background);
+
     header {
         h1 a{
             color: hsla(27, 86%, 50%, 1);
@@ -14,9 +18,6 @@ body {
             color: hsla(27, 91%, 50%, 0.77);
     }
     
-    background-color: $default-background!important;
-    color: set-text-color($default-background);
-
     a {
         color: #00abab;
     }
@@ -26,7 +27,7 @@ body {
     }
     
     :is(h1, h2, h3, h4, h5, h6) {
-        color: #fff;
+        color: #ff0000;
     }
     h1 {
         color: #fa3a3a;
@@ -39,7 +40,8 @@ body {
     .ascii {
         overflow-x: visible;
     }
-    img {
+    img .logo {
+        max-width: 180%;
         overflow-x: visible;
     }
     footer {color: #fafdfa;}
