--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,12 @@
         console.log(time);
         function flipSwitch() {
 
-        if (document.querySelector('html').style.backgroundColor = 'rgb(35, 35, 35)') {
-            document.querySelector('html').style.backgroundColor = 'rgb(250, 250, 250)';
+        if (document.querySelector('body').style.backgroundColor = 'rgb(35, 35, 35)') {
+            document.querySelector('body').style.backgroundColor = 'rgb(250, 250, 250)';
             console.log('clrwasfafafa');
         }
-        if (document.querySelector('html').style.backgroundColor = 'rgb(250, 250, 250)') {
-            document.querySelector('html').style.backgroundColor = 'rgb(35, 35, 35)';
+        if (document.querySelector('body').style.backgroundColor = 'rgb(250, 250, 250)') {
+            document.querySelector('body').style.backgroundColor = 'rgb(35, 35, 35)';
     console.log('darkkk');
         }
     }
@@ -41,7 +41,8 @@
         <h3 id="-blog-posts-blog-"><a href="/archive" title="blog">blog</a></h3>
         <h3 id="-about-about-about-"><a href="/about" title="about">about</a></h3>
         <h3 id="-why-why-why-"><a href="/why" title="why">why</a></h3>
-        <h4><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h4>
+        <h3 id="-interesting-interesting-interesting"><a href="/interesting" title="interesting">interesting</a></h3>
+        <h6><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h6>
         <button id="toggleUI" onclick="flipSwitch()"> i </button>
         <p>color testing here</p>
       </header>
