change to default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script>
-        var time = Date.now;
+        var time = Date.now();
         console.log(time);
         function flipSwitch() {
 
@@ -50,15 +50,13 @@
       {{ content }}
       </section>
       <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Do U Realize</small></p>
+        <p><small>7te7te7te7te</small></p>
+        <sup>7te7te7te7te</sup>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     <script>
-        console.log(Date.now - time);
+        console.log(Date.now() - time);
     </script>
 
     {% if site.google_analytics %}
