--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,4 +23,19 @@ layout: default
                      {% endfor %}
                  </tbody>
              </table>
+             <ul>
+                    {% for post in site.posts %}
+                      <li>
+                        <a href="{{ post.url }}">{{ post.title }}</a>
+                      </li>
+                    {% endfor %}
+                  </ul>
+                  {% for tag in site.tags %}
+  <h3>{{ tag[0] }}</h3>
+  <ul>
+    {% for post in tag[1] %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+{% endfor %}
 </div>
