remove and refresh styles

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,65 +2,4 @@
 ---
 
 @import "{{ site.theme }}";
-$dark : #111;
-$light : #fafafa;
-$default-background : #292929;
-
-@function set-text-color($color) {
-    @if (lightness( $color ) > 50) {
-        @return $dark;
-    }
-    @else {
-        @return $light;
-    }
-}
-
-
-
-body {
-    
-     background-color: $default-background!important;
-     color: set-text-color($default-background);
-
-    header {
-        h1 a{
-            color: hsla(27, 86%, 50%, 1);
-        }
-        h1 a:hover{
-            color: hsla(27, 91%, 50%, 0.77);
-    }
-    
-    a {
-        color: #00abab;
-    }
-
-    a:hover {
-        color: #006868;
-    }
-    
-    :is(h1, h2, h3, h4, h5, h6) {
-        color: set-text-color($default-background);
-    }
-
-    h1 {
-        font-weight: 800;
-     }
-
-    pre code {
-        background-color: #557573;
-    }
-
-    .ascii {
-        background-color: rgba(255, 99, 71, 0);
-        overflow-x: visible;
-        border: none;
-        color: #fff;
-    }
-
-    img .logo {
-        max-width: 180%;
-        overflow-x: visible;
-    }
-    footer {color: #fafdfa;}
-}
-}
+@import "https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css";
