--- a/assets/css/build.scss
+++ b/assets/css/build.scss
@@ -1,27 +1,66 @@
-body .wrapper {
-    header {
-        h1 {
-            color: hsla(35, 91%, 91%, 0.94);
-        }
+---
+---
+
+@import "{{ site.theme }}";
+$dark : #111;
+$light : #fafafa;
+$default-background : #292929;
+
+@function set-text-color($color) {
+    @if (lightness( $color ) > 50) {
+        @return $dark;
     }
-    background-color: #292929 !important;
+    @else {
+        @return $light;
+    }
+}
 
 
+
+body {
+    
+     background-color: $default-background!important;
+     color: set-text-color($default-background);
+
+    header {
+        h1 a{
+            color: hsla(27, 86%, 50%, 1);
+        }
+        h1 a:hover{
+            color: hsla(27, 91%, 50%, 0.77);
+    }
+    
     a {
         color: #00abab;
-
     }
+
     a:hover {
         color: #006868;
     }
+    
+    :is(h1, h2, h3, h4, h5, h6) {
+        color: set-text-color($default-background);
+    }
 
     h1 {
-        font-size: 4rem;
+        font-weight: 800;
+     }
+
+    pre code {
+        background-color: #557573;
     }
 
-    code, pre {
+    .ascii {
+        background-color: rgba(255, 99, 71, 0);
+        overflow-x: visible;
+        border: none;
+        color: #fff;
+    }
+
+    img .logo {
+        max-width: 180%;
         overflow-x: visible;
     }
-
-    footer {display:none;}
+    footer {color: #fafdfa;}
+}
 }
