this is going to break jekyll my spidey sense is tingling atm

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
         <h3 id="-why-why-why-"><a href="/why" title="why">why</a></h3>
         <h3 id="-interesting-interesting-interesting"><a href="/interesting" title="interesting">interesting</a></h3>
         <h6><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h6>
-        <button id="toggleUI" onclick="flipSwitch()"> i </button>
+        <button id="toggleUI" onclick="flipSwitch()" style="display: none;"> i </button>
         <p>color testing here</p>
       </header>
       <section>
