change username in typing layout

--- a/_layouts/typing.html
+++ b/_layouts/typing.html
@@ -5,7 +5,7 @@ layout: default
 
 <div id="typing-container">
     <script>
-        let username = 'jml-'
+        let username = 'thonkang'
         var apiDateStart = 1476799995;
         var apiDateEnd = Date.now();
         let recentRacesRequest = `https://data.typeracer.com/games?playerId=tr:${username}&universe=play&startDate=${apiDateStart}&endDate=${apiDateEnd}`;
