change api request, have to add cors in a second

--- a/_layouts/typing.html
+++ b/_layouts/typing.html
@@ -16,9 +16,9 @@ layout: default
         req.open('GET', profileRequest);
         req.send();
         req.onLoad = function (){
-            const res = request.response;
+            const responseCode = request.response;
             
-            console.log(res);
+            console.log(request);
 
             const profileElement = `
             <li>
