--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,99 +1,3 @@
-<!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-        var time = Date.now;
-        console.log(time);
-        function flipSwitch() {
-
-        if (document.querySelector('html').style.backgroundColor = 'rgb(35, 35, 35)') {
-            document.querySelector('html').style.backgroundColor = 'rgb(250, 250, 250)';
-            console.log('clrwasfafafa');
-        }
-        if (document.querySelector('html').style.backgroundColor = 'rgb(250, 250, 250)') {
-            document.querySelector('html').style.backgroundColor = 'rgb(35, 35, 35)';
-    console.log('darkkk');
-        }
-    }
-    </script>
-{% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-    <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
-        
-        {% if site.logo %}
-          <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
-
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <div class="sidebar">
-        </div>
-        <div></div>
-        <h2 id="-blog-posts-blog-"><a href="/archive" title="blog">blog</a></h2>
-        <h2 id="-about-about-about-"><a href="/about" title="about">about</a></h2>
-        <h2 id="-why-why-why-"><a href="/why" title="why">why</a></h2>
-        <h4><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h4>
-        <button id="toggleUI" onclick="flipSwitch()"> i </button>
-      </header>
-      <section>
-        <pre class="ascii">
-          
-
-▓█████▄ ▓█████   ██████ ▄▄▄█████▓ ██▀███   ▒█████ ▓██   ██▓ ██▓ ███▄    █   ▄████    ▓█████▄  ▒█████  ▄▄▄█████▓   
-▒██▀ ██▌▓█   ▀ ▒██    ▒ ▓  ██▒ ▓▒▓██ ▒ ██▒▒██▒  ██▒▒██  ██▒▓██▒ ██ ▀█   █  ██▒ ▀█▒   ▒██▀ ██▌▒██▒  ██▒▓  ██▒ ▓▒   
-░██   █▌▒███   ░ ▓██▄   ▒ ▓██░ ▒░▓██ ░▄█ ▒▒██░  ██▒ ▒██ ██░▒██▒▓██  ▀█ ██▒▒██░▄▄▄░   ░██   █▌▒██░  ██▒▒ ▓██░ ▒░   
-░▓█▄   ▌▒▓█  ▄   ▒   ██▒░ ▓██▓ ░ ▒██▀▀█▄  ▒██   ██░ ░ ▐██▓░░██░▓██▒  ▐▌██▒░▓█  ██▓   ░▓█▄   ▌▒██   ██░░ ▓██▓ ░    
-░▒████▓ ░▒████▒▒██████▒▒  ▒██▒ ░ ░██▓ ▒██▒░ ████▓▒░ ░ ██▒▓░░██░▒██░   ▓██░░▒▓███▀▒   ░▒████▓ ░ ████▓▒░  ▒██▒ ░    
- ▒▒▓  ▒ ░░ ▒░ ░▒ ▒▓▒ ▒ ░  ▒ ░░   ░ ▒▓ ░▒▓░░ ▒░▒░▒░   ██▒▒▒ ░▓  ░ ▒░   ▒ ▒  ░▒   ▒     ▒▒▓  ▒ ░ ▒░▒░▒░   ▒ ░░      
- ░ ▒  ▒  ░ ░  ░░ ░▒  ░ ░    ░      ░▒ ░ ▒░  ░ ▒ ▒░ ▓██ ░▒░  ▒ ░░ ░░   ░ ▒░  ░   ░     ░ ▒  ▒   ░ ▒ ▒░     ░       
- ░ ░  ░    ░   ░  ░  ░    ░        ░░   ░ ░ ░ ░ ▒  ▒ ▒ ░░   ▒ ░   ░   ░ ░ ░ ░   ░     ░ ░  ░ ░ ░ ░ ▒    ░         
-   ░       ░  ░      ░              ░         ░ ░  ░ ░      ░           ░       ░       ░        ░ ░              
- ░                                                 ░ ░                                ░                           
- ▄████▄   ▒█████   ███▄ ▄███▓ ██▓███   █    ██ ▄▄▄█████▓▓█████  ██▀███                                            
-▒██▀ ▀█  ▒██▒  ██▒▓██▒▀█▀ ██▒▓██░  ██▒ ██  ▓██▒▓  ██▒ ▓▒▓█   ▀ ▓██ ▒ ██▒                                          
-▒▓█    ▄ ▒██░  ██▒▓██    ▓██░▓██░ ██▓▒▓██  ▒██░▒ ▓██░ ▒░▒███   ▓██ ░▄█ ▒                                          
-▒▓▓▄ ▄██▒▒██   ██░▒██    ▒██ ▒██▄█▓▒ ▒▓▓█  ░██░░ ▓██▓ ░ ▒▓█  ▄ ▒██▀▀█▄                                            
-▒ ▓███▀ ░░ ████▓▒░▒██▒   ░██▒▒██▒ ░  ░▒▒█████▓   ▒██▒ ░ ░▒████▒░██▓ ▒██▒                                          
-░ ░▒ ▒  ░░ ▒░▒░▒░ ░ ▒░   ░  ░▒▓▒░ ░  ░░▒▓▒ ▒ ▒   ▒ ░░   ░░ ▒░ ░░ ▒▓ ░▒▓░                                          
-  ░  ▒     ░ ▒ ▒░ ░  ░      ░░▒ ░     ░░▒░ ░ ░     ░     ░ ░  ░  ░▒ ░ ▒░                                          
-░        ░ ░ ░ ▒  ░      ░   ░░        ░░░ ░ ░   ░         ░     ░░   ░                                           
-░ ░          ░ ░         ░               ░                 ░  ░   ░                                               
-░                                                                                                                 
-
-
-        </pre>
-      {{ content }}
-      </section>
-      <footer>
-        {% if site.github.is_project_page %}
-        <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
-        {% endif %}
-        <p><small>Do U Realize</small></p>
-      </footer>
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    <script>
-        console.log(Date.now - time);
-    </script>
-
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-  </body>
-</html>
+---
+layout:default
+---
