--- a/_layouts/typing.html
+++ b/_layouts/typing.html
@@ -14,6 +14,7 @@ layout: default
 
         let req = new XMLHttpRequest();
         req.open('GET', profileRequest);
+        req.setRequestHeader("Content-Type", "application/json");
         req.send();
         req.onLoad = function (){
             const responseCode = request.response;
