--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,22 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script>
-        var time = Date.now();
-        console.log(time);
-        function flipSwitch() {
-
-        if (document.querySelector('body').style.backgroundColor = 'rgb(35, 35, 35)') {
-            document.querySelector('body').style.backgroundColor = 'rgb(250, 250, 250)';
-            console.log('clrwasfafafa');
-        }
-        if (document.querySelector('body').style.backgroundColor = 'rgb(250, 250, 250)') {
-            document.querySelector('body').style.backgroundColor = 'rgb(35, 35, 35)';
-    console.log('darkkk');
-        }
-    }
-    </script>
-{% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -30,11 +14,11 @@
       <header>
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
-        {% if site.logo %}
+        <!--{% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
-        {% endif %}
+        {% endif %} -->
 
-        <p>{{ site.description | default: site.github.project_tagline }}</p>
+        <p><i>{{ site.description | default: site.github.project_tagline }}</i></p>
         <div class="sidebar">
         </div>
         <div></div>
@@ -42,32 +26,16 @@
         <h3 id="-about-about-about-"><a href="/about" title="about">about</a></h3>
         <h3 id="-why-why-why-"><a href="/why" title="why">why</a></h3>
         <h3 id="-interesting-interesting-interesting"><a href="/interesting" title="interesting">interesting</a></h3>
-        <h6><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h6>
+        <h3><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h3>
         <button id="toggleUI" onclick="flipSwitch()" style="display: none;"> i </button>
-        <p>color testing here</p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p><small>7te7te7te7te</small></p>
         <sup>7te7te7te7te</sup>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    <script>
-        console.log(Date.now() - time);
-    </script>
-
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
   </body>
 </html>
