change every layout and permalinks for most webpages!

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         <h3 id="-about-about-about-"><a href="/about" title="about">about</a></h3>
         <h3 id="-why-why-why-"><a href="/why" title="why">why</a></h3>
         <h3 id="-interesting-interesting-interesting"><a href="/interesting" title="interesting">interesting</a></h3>
-        <h3><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h3>
+        <!-- <h3><a href="/bezos" title="jeff (not that jeff)">jeff altar</a></h3> -->
         <button id="toggleUI" onclick="flipSwitch()" style="display: none;"> i </button>
       </header>
       <section>
