--- a/_layouts/typing.html
+++ b/_layouts/typing.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-
+{% include feed.html %}
 <div id="typing-container">
     <!--use liquid here-->
     <!-- <script src="https://data.typeracer.com/users?id=tr:drexciya&universe=play"></script> -->
