add vw to newtab

--- a/_layouts/interesting.html
+++ b/_layouts/interesting.html
@@ -1,4 +1,4 @@
 ---
 layout: default
 ---
-<head><link rel="alternate" type="application/rss+xml" href="{{ site.url }}/layouts/feed.xml"></head>
+<head><link rel="alternate" type="application/rss+xml" href="{{ site.url }}/includes/feed.xml"></head>
