writing content, tagging blog posts

--- a/_layouts/typing.html
+++ b/_layouts/typing.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 ---
 
 {% include feed.html %}
@@ -8,6 +8,10 @@ layout: default
     <!-- <script src="https://data.typeracer.com/users?id=tr:drexciya&universe=play"></script> -->
     
     <h1>recent typing results</h1>
+    <img src="https://data.typeracer.com/misc/badge?user=thonkang">
+    <img src="https://data.typeracer.com/misc/badge?user=drexciya">
+    <img src="https://data.typeracer.com/misc/badge?user=jml-">
+
     <ul>
 
     </ul>
