change xml feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
       {{ content }}
       </section>
       <footer>
-        <sup>7te7te7te7te</sup>
+        <sup>7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te</sup>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
