--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
     </div>
     <script src="/assets/js/fp.min.js"></script>
     <script>
-      const fp = await FingerprintJS.load({ /* ... */ })
-      const result = await fp.get()
+      const fp = FingerprintJS.load({ /* ... */ })
+      const result = fp.get()
       const visitorId = result.visitorId
       console.log(visitorId)
     </script>
