--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,3 +1,8 @@
 ---
 layout: default
 ---
+
+{% include background.html %}
+{% for project in site.github.repository %}
+<h1>wow!</h1>
+{% endfor %}
