--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,8 +1,13 @@
 ---
 layout: default
 ---
-
 {% include background.html %}
+
+<div id="details">
+
+</div>
+{% include background.html %}
+
 {% for project in site.github.repository %}
 <h1>wow!</h1>
 {% endfor %}
