fix js selector

--- a/_includes/background.html
+++ b/_includes/background.html
@@ -15,7 +15,7 @@
     outputStr = outputStr + "<br>Java enabled: " + isJavaEnabled;
     outputStr = outputStr + "<br>Screen width: " + screenWidth;
     outputStr = outputStr + "<br>Screen height: " + screenHeight + "</p>";
-    document.getElementById(details).innerHTML = (outputStr); // print
+    document.getElementById('details').innerHTML = (outputStr); // print
     }
 
     ShowBrowserDetails();
