--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include background.html %}
 
-<div id="details">
+<div id="details" style="z-index: -1;">
 
 </div>
 {% include background.html %}
