--- a/_includes/background.html
+++ b/_includes/background.html
@@ -9,7 +9,7 @@
     var screenWidth = screen.width; // get screen width
     var screenHeight = screen.height; // get screen height
     // the following stores the output in outputStr variable
-    var outputStr = "<h1>Browser details</h1>";
+    var outputStr = "<h1>Browser</h1>";
     outputStr = outputStr + "<p>Name: " + BrowserName;
     outputStr = outputStr + "<br>Version: " + appVersion;
     outputStr = outputStr + "<br>Java enabled: " + isJavaEnabled;
