--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
       </section>
       <footer>
         <sup>7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te7te</sup>
+        {% include background.html %}
       </footer>
     </div>
     <script src="/assets/js/fp.min.js"></script>
