--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -3,10 +3,9 @@ layout: default
 ---
 {% include background.html %}
 
-<div id="details" style="z-index: -1;">
+<div id="details">
 
 </div>
-{% include background.html %}
 
 {% for project in site.github.repository %}
 <h1>wow!</h1>
