--- a/_includes/background.html
+++ b/_includes/background.html
@@ -15,6 +15,7 @@
     outputStr = outputStr + "<br>Java enabled: " + isJavaEnabled;
     outputStr = outputStr + "<br>Screen width: " + screenWidth;
     outputStr = outputStr + "<br>Screen height: " + screenHeight + "</p>";
+    outputStr = outputStr + "<br>Fingerprint ID: " + visitorId + "</p>";
     document.getElementById('details').innerHTML = (outputStr); // print
     }
 
